bug: fixed general problem with svg sizes on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -230,6 +230,7 @@ input[type='submit'] {
 		fill: $color-white;
 		display: inline-flex;
 		width: 1.4rem;
+		height: 1.4rem;
 		margin: auto 0.5rem auto 0;
 	}
 
@@ -255,6 +256,7 @@ input[type='submit'] {
 
 		.img {
 			width: 1.2rem;
+			height: 1.2rem;
 		}
 	}
 
